k8s/applications/utils/glance/base/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: glance
spec:
  parentRefs:
    - {namespace: gateway, name: default, sectionName: https-wc-karlsen-app}
  hostnames: [glance.karlsen.app]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: web, kind: Service, port: 80}]
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              # - {name: Access-Control-Allow-Origin, value: '*'}
              - {name: Content-Security-Policy, value: "default-src 'none'; style-src-elem 'self' 'unsafe-inline' 'unsafe-hashes'; style-src-attr 'self' 'unsafe-inline'; script-src-elem 'self' 'unsafe-inline'; img-src 'self' https://static-cdn.jtvnw.net https://i1.ytimg.com https://i2.ytimg.com https://i3.ytimg.com https://i4.ytimg.com https://external-preview.redd.it https://preview.redd.it; font-src 'self'; connect-src 'self'; frame-ancestors 'none'; form-action 'none'; base-uri 'none';"}
              - {name: Strict-Transport-Security, value: 'max-age=31536000; includeSubDomains; preload'}
              - {name: X-Content-Type-Options, value: nosniff}
              - {name: X-Frame-Options, value: DENY}
              - {name: Cross-Origin-Resource-Policy, value: same-origin}
              - {name: Cross-Origin-Embedder-Policy, value: unsafe-none}
              - {name: Cross-Origin-Opener-Policy, value: same-origin}
              - {name: Referrer-Policy, value: no-referrer}
              - {name: Permissions-Policy, value: 'accelerometer=(), autoplay=(), camera=(), encrypted-media=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()'}
              - {name: Integrity-Policy, value: 'blocked-destinations=(style),sources=(inline)'}
              # - {name: Reporting-Endpoints, value: ''}
